# war-games

./: .gitignore  AGENTS.md  CHANGELOG.md  CHORES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 00bd28ba96693e50  0b981568d1ecf12a  18cf5f0b08dd63e3  22a32e93320a9052  2582e0ca19712b03  28e94f0c01cffee8  2f198bde68a460b4  3f90e26121e78e7c  59c94840f370255e  5a5003242179a5ac  6032794364a901da  6736527412e037f8  69fcea6f78a09317  6b05a7128295dd07  6fe3b0cf020ab81a  7bc086568f81dc03  8a73bb7d7a0495ce  962f3c52398b960e  a864d6401a0d3f11  b2ea0bf598967375  b81d3dd67363761c  bdc7e58a63006742  c8bac39c6a881fd2  ccc4737bf49eed78  da39a3ee5e6b4b0d  e3dd28cc073996cd  fcd1b9134572d16e
.sisyphus/plans/: opencode-integration.md
antigravity-bridge/: bridge.py  start.sh
config/: cloud-judge.toml  cloud-llama.toml  default.toml  fallback-cloud.toml  full-cloud.toml  opencode.toml  openrouter.toml  roster-cloud-deep.toml  roster-cloud.toml  roster-example.toml  roster-local.toml  roster-mini.toml  test-local.toml  test-multi.toml  tournament.toml
config/scoring/: balanced.toml  blue-favored.toml  red-favored.toml
docs/: DEVELOPER_SETUP.md  api.rst  conf.py  index.rst
docs/architecture/: engine.rst  evolution.rst  overview.rst  teams.rst
docs/cli/: commands.rst  config.rst
docs/plans/: 2026-03-06-war-games-expansion-design.md  2026-03-06-war-games-expansion.md  2026-03-07-expansion-v3-design.md  2026-03-07-expansion-v3-plan.md  2026-03-07-play-it-for-real-design.md  2026-03-07-play-it-for-real-plan.md  2026-03-07-timeout-fix-cloud-models-design.md  2026-03-07-timeout-fix-cloud-models-plan.md  2026-03-09-evolution-improvements-design.md  2026-03-09-evolution-improvements-plan.md  2026-03-09-scoring-engine-plan.md  2026-03-09-war-games-expansion-v4-design.md  2026-03-09-war-games-expansion-v4.md  2026-03-09-war-games-expansion-v5-design.md
scripts/: run-in-slice.sh
tests/: AGENTS.md  smoke_cloud.py  test_benchmarks.py  test_cli.py  test_config.py  test_integration.py  test_ladder_cli.py  test_scoring.py  test_stats_cli.py  test_worker.py
tests/crawler/: test_crawler.py
tests/engine/: test_draft.py  test_elo.py  test_game.py  test_judge.py  test_loadouts.py  test_round.py  test_sandbox.py  test_scenario.py  (+3 more)
wargames/: AGENTS.md  cli.py  config.py  models.py  worker.py
(+37 files in other folders)
